# macrolut

./: .gitignore  CMakeLists.txt  README.md  lut.h  lut_test.c
